--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 } */
 
 .FamilyTree {
-  /* CSConcentrationManager */
+  /* Family Tree */
 
   position: absolute;
   width: 70vw;
@@ -17,6 +17,26 @@
   font-weight: 400;
   font-size: 4vw;
   /*line-height: 116px;*/
+}
+
+.Info {
+  /* Info */
+  position: sta;
+  background: #d9d9d9;
+  border: 2px solid #000000;
+
+  /* font-weight: 400; */
+  /* font-size: 4vw; */
+}
+
+.Info_par {
+  /* Info */
+
+  background: #d9d9d9;
+  /* border: 2px solid #000000; */
+
+  /* font-weight: 400; */
+  /* font-size: 4vw; */
 }
 
 .ScheduleBackground {
