--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,8 @@
 
   margin-bottom: 2vh;
   justify-items: center;
+  padding-left: 2vw;
+  padding-right: 2vw;
 
   width: 90vw;
   margin-left: 5vw;
