--- a/styles/main.css
+++ b/styles/main.css
@@ -44,9 +44,8 @@
   padding-left: 2vw;
   padding-right: 2vw;
 
-  width: 90vw;
-  margin-left: 5vw;
-  margin-right: 5vw;
+  width: 90%;
+  margin-left: 5%;
 
   /* font-weight: 400; */
   /* font-size: 4vw; */
