--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,10 @@
   width: 100%;
   height: 4vh;
 }
+.person:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
 
 .Person_0 {
   /* Person in generation 0 */
@@ -190,23 +194,6 @@
   font-size: 4vw; */
 }
 
-.Person_0:hover,
-.Person_0m:hover,
-.Person_1:hover,
-.Person_1m:hover,
-.Person_2:hover,
-.Person_2m:hover,
-.Person_3:hover,
-.Person_3m:hover,
-.Person_4:hover,
-.Person_4m:hover,
-.Person_5:hover,
-.Person_5m:hover,
-.Person_6:hover,
-.Person_6m:hover,
-.Person_7:hover {
-  font-weight: bold;
-}
 
 @media (max-width: 980px) {
   .person {
