updated css media queries

--- a/styles/main.css
+++ b/styles/main.css
@@ -194,24 +194,13 @@
   font-size: 4vw; */
 }
 
-
 @media (max-width: 1155px) {
   * {
-    font-size: .95rem;
+    font-size: 0.95rem;
   }
 }
 @media (max-width: 1060px) {
-  * {
-    font-size: .9rem;
-  }
-}
-@media (max-width: 1011px) {
   .person {
     height: 6vh;
-  }
-}
-@media (max-width: 622px) {
-  .person {
-    height: 8vh;
   }
 }
