--- a/styles/main.css
+++ b/styles/main.css
@@ -206,11 +206,16 @@
     height: 6vh;
   }
 }*/
-@media (max-width: 650px) {
+@media (max-width: 550px) {
   * {
     font-size: 0.9rem;
   }
   .person {
     height: 6vh;
   }
-} 
+}
+@media (max-width: 400px) {
+  .person {
+    height: 8vh;
+  }
+}
