added Both spreadsheet

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,10 @@ header {
     background-color: var(--light-green);
     width: fit-content;
   }
+  div {
+    background-color: var(--light-green);
+    width: fit-content;
+  }
 }
 
 input {
