added password submit button

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,16 @@ header {
   }
 }
 
+.password_button {
+  margin-left: 0.1%;
+
+  &:hover {
+    font-weight: bold;
+    cursor: pointer;
+    border-left: 3px solid var(--off-black);
+  }
+}
+
 .toggle_tree {
   display: flex;
   gap: 10%;
